--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,18 @@
 #invalid {
   display: none;
 }
+
+body {
+  background-color: black;
+  color: aqua;
+  font-size: large;
+}
+
+#expand {
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+  text-decoration: underline;
+}
